# garment_mockup_gen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  skills-lock.json
.github/workflows/: sync-to-hf.yml
backend/: auth.py  deps.py  main.py  schemas.py
backend/routers/: backfill.py  batch.py  generate.py  import_shots.py  products.py  prompts.py
backend/services/: batch_worker.py
docs/: batch-gen.md  deploy-rembg.md
docs/migrations/: 2026-06-23-color-and-public-bucket.md  2026-06-23-mockup-variations.sql  2026-06-24-backfill-edits.sql  2026-06-24-backfill.sql  2026-06-24-phototheme.sql  2026-06-25-backfill-items.sql  2026-07-12-edit-presets.sql  2026-07-14-batch-items.sql  2026-07-15-batch-storage-staging.sql  2026-07-15-prompt-tag-lines.sql  2026-07-17-batch-attempts.sql
docs/plans/: 2026-06-21-design.md  2026-06-21-implementation-plan.md  2026-06-22-phase2-design.md  2026-06-22-phase2-implementation-plan.md  2026-06-23-phase3-design.md
docs/superpowers/plans/: 2026-06-23-phase4-feedback-regenerate.md  2026-06-23-phase5-prompts-and-docs.md  2026-06-23-phase6-auto-refine-prompt.md  (+9 more)
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
mockup_generator/: config.py  create_base.py  create_mockup.py  create_video.py  prompt.py  prompt_config.py  trial.py
mockup_generator/db/: backfill_edits_repo.py  backfill_items_repo.py  batch_items_repo.py  edit_presets_repo.py  mockup_variations_repo.py  mockups_repo.py  product_ids.py  productimages_repo.py  products_repo.py  profiles_repo.py  prompts_repo.py  variants_repo.py
mockup_generator/generation/: common.py  edit_pipeline.py  images.py  legacy_openai.py  publish.py  service.py  video.py  video_service.py  watermark.py
mockup_generator/integrations/: drive_client.py  storage_client.py  supabase_client.py
mockup_generator/prompts/: defaults.py  refine.py
mockup_generator/services/: backfill_service.py  backfill_sync.py  batch_enqueue.py
tasks/: lessons.md
tests/: test_approve_publish.py  test_backfill_api.py  test_backfill_drive.py  test_backfill_items_repo.py  test_backfill_service.py  test_backfill_sync.py  test_batch_api.py  test_batch_drive.py  test_batch_enqueue.py  test_batch_items_repo.py  test_batch_worker.py  test_category_prompts.py  test_config_rembg.py  test_drive_client.py  test_edit_pipeline_bg.py  test_edit_pipeline_geometry.py  test_edit_presets_repo.py  test_generate_api.py  test_generation_service.py  test_import_cache.py  test_import_presets_api.py  test_import_publish_name.py  test_import_schemas.py  test_import_shots_api.py  test_imports.py  test_mockups_repo.py  test_next_product_shot_order.py  test_product_ids.py  test_productimages_repo.py  test_products_api.py  test_products_repo.py  test_prompts_api.py  test_prompts_repo.py  test_publish_image.py  test_refine.py  test_storage_and_variations.py  test_variants_repo.py  test_video_service.py  test_watermark.py
(+26 files in other folders)
