[project]
name = "mockup-generator"
version = "0.1.0"
description = "Luxury garment mockup tool"
authors = [{ name = "bindal.abhinav@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "openai>=1.99.3,<2.0.0",
  "pillow>=11.3.0,<12.0.0",
  "python-dotenv (>=1.1.1,<2.0.0)",
  "google-genai (>=2.9.0,<3.0.0)",
  "streamlit (>=1.50.0,<2.0.0)",
  "python-pptx (>=1.0.2,<2.0.0)",
  "fastapi (>=0.138.0,<0.139.0)",
  "uvicorn[standard] (>=0.49.0,<0.50.0)",
  "supabase (>=2.31.0,<3.0.0)",
  "google-api-python-client (>=2,<3)",
  "google-auth (>=2,<3)",
  "python-multipart (>=0.0.32,<0.0.33)",
  "pillow-heif (>=1.4.0,<2.0.0)"
]

[project.scripts]
mockup = "mockup_generator.create_mockup:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated"
]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
